# safe-rover-navi

./: .gitignore  README.md  css.bundle.js  index.bundle.js  index.html  pyproject.toml  reactPlayerDailyMotion.bundle.js  reactPlayerFacebook.bundle.js  reactPlayerFilePlayer.bundle.js  reactPlayerKaltura.bundle.js  reactPlayerMixcloud.bundle.js  reactPlayerPreview.bundle.js  reactPlayerSoundCloud.bundle.js  reactPlayerStreamable.bundle.js  reactPlayerTwitch.bundle.js  reactPlayerVidyard.bundle.js  reactPlayerVimeo.bundle.js  reactPlayerWistia.bundle.js  reactPlayerYouTube.bundle.js  setup.cfg
notebooks/: demo.ipynb
planning_project/env/: env.py  slip_models.py  utils.py
planning_project/models/: unet.py
planning_project/planner/: cost_calculator.py  motion_model.py  planner.py  utils.py
planning_project/utils/: data.py  structs.py  viz.py
scripts/: create_animation.py  create_data.py  eval.py  train.py
