[metadata]
name = planning_project
version = 0.0.1

[options]
packages = find:
install_requires =
    numpy==1.23.0
    scipy==1.8.1
    seaborn==0.11.2
    jupyterlab==3.4.3
    matplotlib==3.5.2
    opensimplex==0.4.3
    torch==1.12.0
    segmentation-models-pytorch==0.2.1
    tensorboard==2.9.1
    GPy==1.10.0
    scikit-learn==1.1.1

[options.extras_require]
dev =
    pytest
    pysen==0.10.1
    black==21.10b0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.910
    click==8.0.2  # hotfix for the error for black
    nbsmoke==0.6.0   # for testing notebooks

